# RDF-Summarizer

./: 404.html  CITATION.cff  README.md  automate_mkdocs.py  index.html  mkdocs.yml  mkgendocs.yml  pyproject.toml
.github/workflows/: docs.yml  main.yml
modules/src/rdf_summarizer/prefixes/: index.html
modules/src/rdf_summarizer/summarization/: index.html
modules/src/rdf_summarizer/trie/: index.html
modules/src/rdf_summarizer/write_file/: index.html
search/: search_index.json
src/rdf-summarizer/: __main__.py  create_jsons.py  func_summarization.py  get_prefix.py  prefixes.py  write_file.py
src/rdf_summarizer/: __init__.py  __main__.py  prefixes.py  summarization.py  trie.py  write_file.py
