[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "rdf-summarizer"
version = "0.0.1"
description = "Summarization of a RDF graph"
readme = "README.md"
authors = [{ name = "Rita Costa", email = "ritasantoscosta9@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
]
keywords = ["rdf", "summary"]
dependencies = [
	"rdflib",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/ritasantos11/RDF-Summarizer"

[project.scripts]
rdf-summarize = "rdf_summarizer.__main__:main"
